# Hopfieldcpp

./: HopfieldNetwork.h  README.md  main.C
source/: CMakeLists.txt  HopfieldNetwork.h  example.C  main.C
test/: pushback.test.C  uninitpatterns.test.C  uninitweights.test.C
